--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>net.robinfriedli.JXP</groupId>
     <artifactId>JXP</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
     <build>
         <plugins>
             <plugin>
@@ -30,7 +30,6 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>25.1-jre</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
