--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>StringList</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-support</artifactId>
+      <version>3.14.0</version>
+    </dependency>
   </dependencies>
 
   <repositories>
