LazyContext, SequentialTx, query and listener overhaul and logging
 - introduce LazyContext, a kind of Context that only instantiates
   XmlElement instances once requested and only stores elements in state
   CONCEPTION and DELETION and only during a transaction until it's
   flushed. TheContext#xPathQuery method paired with a LazyContext also
   introduces the possibility of instantiating only a select amount of
   XmlElement instances. The implementer can store these instances as
   needed.
 - introduce sequential transactions that can be used using the
   Context#invokeSequential method. This kin of transaction flushes
   itself each time the provided number of changes is reached, meaning
   it commits and clears all recorded changes to clear up ram. It is
   even more effective when used in combination with a LazyContext as it
   will also clear temporarily stored XmlElements.
 - added slf4j logging support and create ConsoleLogger fallback
 - created XQueryBuilder to build an XPath query similar to the JXP
   Query
 - queries can now cast their results to a provided XmlElement subclass
 - queries now capture their result to a stream that is only collected
   when once needed. Alternatively if you need to perform several
   terminating operations on the stream you can still collect it to a
   legacy QueryResult using the ResultStream#getResult method
 - queries no longer throw an exception when the attribute of one
   element cannot be converted to the given type, false is returned
   instead
 - queries can now be started from XmlElements querying their subElements
 - Conditions: added tagName condition
 - listeners can now optionally interrupt transaction execution when
   throwing an exception by passing mayInterrupt = true to the
   constructor
 - added onBeforeFlush to listener, as this might happen several times
   during a SequentialTx and changes are not available anymore from the
   transactionCommitted event
 - RecursiveDeletingEvents and subElements b

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>net.robinfriedli.JXP</groupId>
   <artifactId>JXP</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>1.1</version>
   <build>
     <plugins>
       <plugin>
@@ -41,6 +41,12 @@
       <artifactId>selenium-support</artifactId>
       <version>3.14.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.26</version>
+    </dependency>
+
   </dependencies>
 
   <repositories>
