add synchronisation of transactions and write unit tests
 - transactions are now synchronised globally by the canonical file path
   (for persistent contexts) or the hashcode of the dom Document
   instance
   - a global instance of the MutexSync class manages mutexes across all
     threads and automatically clears unused mutexes
 - add TestNG dependency and write unit tests
 - add ability to remove attributes from XmlElements
 - create UninitializedParent as a way for lazy XmlElements created by
   LazyContext#handleXPathResults to access their parent elements
   - parent is initialized and set on the child element as soon as
     needed
 - StaticXmlParser: create convenience method to create Document for
   InputStream
 - cleanup Events
   - split ElementChangingEvent into several events
 - add BindableContext implementation for the LazyContext
 - create copies of collections before iterating where high concurrency
   may be expected
 - make Order support any Comparable type instead of just sorting
   strings lexicographically
 - Conditions: add parentMatches() method to apply a predicate to the
   parent of the element
 - AbstractXmlElement: keep attributes in a map for faster access
 - remove some deprecated methods

--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,26 @@ dependencies {
     compile "org.seleniumhq.selenium:selenium-support:3.14.0"
     compile "org.slf4j:slf4j-api:1.7.26"
     compile "net.robinfriedli:StringList:1.5"
+
+    testCompile "org.testng:testng:7.1.0"
+    testCompile "com.google.truth:truth:1.0.1"
 }
 
 group = "net.robinfriedli"
-version = "1.3"
+version = "1.4"
 description = "JXP"
 sourceCompatibility = "8"
+targetCompatibility = "8"
+
+compileJava.options.encoding = "UTF-8"
 
 task sourceJar(type: Jar) {
     classifier 'sources'
     from sourceSets.main.allJava
+}
+
+test {
+    useTestNG()
 }
 
 publishing {
@@ -56,4 +66,9 @@ bintray {
         repo = rootProject.group
         name = "JXP"
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+    options.deprecation = true
 }
