--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,17 @@ repositories {
 }
 
 dependencies {
-    compile "com.google.guava:guava:25.1-jre"
-    compile "org.seleniumhq.selenium:selenium-support:3.14.0"
-    compile "org.slf4j:slf4j-api:1.7.26"
-    compile "net.robinfriedli:StringList:1.5"
+    implementation "com.google.guava:guava:25.1-jre"
+    implementation "org.seleniumhq.selenium:selenium-support:3.14.0"
+    implementation "org.slf4j:slf4j-api:1.7.26"
+    implementation "net.robinfriedli:StringList:1.6"
 
     testCompile "org.testng:testng:7.1.0"
     testCompile "com.google.truth:truth:1.0.1"
 }
 
 group = "net.robinfriedli"
-version = "1.4"
+version = "2.0"
 description = "JXP"
 sourceCompatibility = "8"
 targetCompatibility = "8"
