--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id "maven-publish"
     id "com.jfrog.bintray" version "1.8.4"
+    id "org.jetbrains.kotlin.jvm" version "1.4.10"
 }
 
 repositories {
@@ -13,6 +14,7 @@ dependencies {
     implementation "com.google.guava:guava:25.1-jre"
     implementation "org.seleniumhq.selenium:selenium-support:3.14.0"
     implementation "org.slf4j:slf4j-api:1.7.26"
+    implementation "net.robinfriedli:exec:1.0"
     implementation "net.robinfriedli:StringList:1.6"
 
     testCompile "org.testng:testng:7.1.0"
@@ -20,7 +22,7 @@ dependencies {
 }
 
 group = "net.robinfriedli"
-version = "2.0.1"
+version = "2.0.2"
 description = "JXP"
 sourceCompatibility = "8"
 targetCompatibility = "8"
