--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id "java"
     id "maven-publish"
-    id "com.jfrog.bintray" version "1.8.4"
     id "org.jetbrains.kotlin.jvm" version "1.4.10"
 }
 
@@ -11,18 +10,18 @@ repositories {
 }
 
 dependencies {
-    implementation "com.google.guava:guava:25.1-jre"
-    implementation "org.seleniumhq.selenium:selenium-support:3.14.0"
-    implementation "org.slf4j:slf4j-api:1.7.26"
-    implementation "com.github.robinfriedli:exec:1.2"
-    implementation "com.github.robinfriedli:StringList:1.6"
+    implementation "com.google.guava:guava:31.0.1-jre"
+    implementation "org.seleniumhq.selenium:selenium-support:4.1.0"
+    implementation "org.slf4j:slf4j-api:1.7.32"
+    implementation "com.github.robinfriedli:exec:1.2.2"
+    implementation "com.github.robinfriedli:StringList:1.6.1"
 
-    testCompile "org.testng:testng:7.1.0"
-    testCompile "com.google.truth:truth:1.0.1"
+    testImplementation "org.testng:testng:7.4.0"
+    testImplementation "com.google.truth:truth:1.0.1"
 }
 
 group = "net.robinfriedli"
-version = "2.0.4"
+version = "2.0.5"
 description = "JXP"
 sourceCompatibility = "8"
 targetCompatibility = "8"
@@ -48,25 +47,6 @@ publishing {
 
             artifact tasks.sourceJar
         }
-    }
-}
-
-def bintrayProperties = new Properties()
-def bintrayPropertiesFile = file("src/main/resources/bintray.properties")
-if (bintrayPropertiesFile.exists()) {
-    bintrayPropertiesFile.withInputStream { bintrayProperties.load(it) }
-} else {
-    bintrayProperties.setProperty("bintray.user", "empty")
-    bintrayProperties.setProperty("bintray.key", "empty")
-}
-
-bintray {
-    user = bintrayProperties.get("bintray.user")
-    key = bintrayProperties.get("bintray.key")
-    publications = ['maven']
-    pkg {
-        repo = rootProject.group
-        name = "JXP"
     }
 }
 
